{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 23,
  "lineage": "01b0bfda-ab90-a112-16c1-1391404e77ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "app_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-085b28bbc16c1023d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "available_ip_address_count": 57,
            "cidr_block": "10.91.40.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:aws:cloudformation:logical-id",
                "values": [
                  "rAppSubnet1"
                ]
              }
            ],
            "id": "subnet-085b28bbc16c1023d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-app-private-az1",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "app_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-0cea2ec77e6c4ded8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1b",
            "availability_zone_id": "mec1-az2",
            "available_ip_address_count": 57,
            "cidr_block": "10.91.40.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:aws:cloudformation:logical-id",
                "values": [
                  "rAppSubnet2"
                ]
              }
            ],
            "id": "subnet-0cea2ec77e6c4ded8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-app-private-az2",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "avm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01e986dcc944a47b1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-01e986dcc944a47b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1b",
            "availability_zone_id": "mec1-az2",
            "available_ip_address_count": 25,
            "cidr_block": "10.91.40.224/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e986dcc944a47b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-code-private-az2",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        },
        {
          "index_key": "subnet-020752009b265234c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-020752009b265234c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1b",
            "availability_zone_id": "mec1-az2",
            "available_ip_address_count": 27,
            "cidr_block": "10.91.40.160/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020752009b265234c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-data-private-az2",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        },
        {
          "index_key": "subnet-0252db1398521bea8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-0252db1398521bea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "available_ip_address_count": 26,
            "cidr_block": "10.91.40.192/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0252db1398521bea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-code-private-az1",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        },
        {
          "index_key": "subnet-085b28bbc16c1023d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-085b28bbc16c1023d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "available_ip_address_count": 57,
            "cidr_block": "10.91.40.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b28bbc16c1023d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-app-private-az1",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        },
        {
          "index_key": "subnet-08955b5f11da30ddd",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-08955b5f11da30ddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "available_ip_address_count": 26,
            "cidr_block": "10.91.40.128/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08955b5f11da30ddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-data-private-az1",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        },
        {
          "index_key": "subnet-0cea2ec77e6c4ded8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-0cea2ec77e6c4ded8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1b",
            "availability_zone_id": "mec1-az2",
            "available_ip_address_count": 57,
            "cidr_block": "10.91.40.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cea2ec77e6c4ded8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-app-private-az2",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-08955b5f11da30ddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "available_ip_address_count": 26,
            "cidr_block": "10.91.40.128/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:aws:cloudformation:logical-id",
                "values": [
                  "rDataSubnet1"
                ]
              }
            ],
            "id": "subnet-08955b5f11da30ddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-data-private-az1",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:subnet/subnet-020752009b265234c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1b",
            "availability_zone_id": "mec1-az2",
            "available_ip_address_count": 27,
            "cidr_block": "10.91.40.160/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:aws:cloudformation:logical-id",
                "values": [
                  "rDataSubnet2"
                ]
              }
            ],
            "id": "subnet-020752009b265234c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397974420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "vpc-genaipilot-sit-data-private-az2",
              "Network": "Private",
              "map-migrated": "mig5TZY31HX9S"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:vpc/vpc-09a3c73e6d7db4347",
            "cidr_block": "10.91.40.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-062f39ab0090a83d0",
                "cidr_block": "10.91.40.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e433e4c61e923b0e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a3c73e6d7db4347",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-027ddcfbeb9dcac6a",
            "owner_id": "767397974420",
            "tags": {
              "Application": "genai-sit-network",
              "Name": "aws-genaipilot",
              "map-migrated": "mig5TZY31HX9S"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:me-central-1:767397974420:listener/app/avm-sit-alb/c60301e925982a90/92851091d79ffbd0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:me-central-1:767397974420:targetgroup/avm-prod-server-tg/cce969f51a6a3180",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:767397974420:listener/app/avm-sit-alb/c60301e925982a90/92851091d79ffbd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:me-central-1:767397974420:loadbalancer/app/avm-sit-alb/c60301e925982a90",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_subnet.app_subnet_1",
            "data.aws_subnet.app_subnet_2",
            "data.aws_vpc.vpc",
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.cluster.aws_cloudwatch_log_group.this",
            "module.ecs.module.cluster.aws_ecs_capacity_provider.this",
            "module.ecs.module.cluster.aws_ecs_cluster.this",
            "module.ecs.module.cluster.aws_ecs_cluster_capacity_providers.this",
            "module.ecs.module.cluster.aws_iam_policy.task_exec",
            "module.ecs.module.cluster.aws_iam_role.task_exec",
            "module.ecs.module.cluster.aws_iam_role_policy_attachment.task_exec",
            "module.ecs.module.cluster.aws_iam_role_policy_attachment.task_exec_additional",
            "module.ecs.module.cluster.data.aws_iam_policy_document.task_exec",
            "module.ecs.module.cluster.data.aws_iam_policy_document.task_exec_assume",
            "module.ecs.module.service.aws_appautoscaling_policy.this",
            "module.ecs.module.service.aws_appautoscaling_scheduled_action.this",
            "module.ecs.module.service.aws_appautoscaling_target.this",
            "module.ecs.module.service.aws_ecs_service.ignore_task_definition",
            "module.ecs.module.service.aws_ecs_service.this",
            "module.ecs.module.service.aws_ecs_task_definition.this",
            "module.ecs.module.service.aws_ecs_task_set.ignore_task_definition",
            "module.ecs.module.service.aws_ecs_task_set.this",
            "module.ecs.module.service.aws_iam_policy.service",
            "module.ecs.module.service.aws_iam_policy.task_exec",
            "module.ecs.module.service.aws_iam_role.service",
            "module.ecs.module.service.aws_iam_role.task_exec",
            "module.ecs.module.service.aws_iam_role.tasks",
            "module.ecs.module.service.aws_iam_role_policy.tasks",
            "module.ecs.module.service.aws_iam_role_policy_attachment.service",
            "module.ecs.module.service.aws_iam_role_policy_attachment.task_exec",
            "module.ecs.module.service.aws_iam_role_policy_attachment.task_exec_additional",
            "module.ecs.module.service.aws_iam_role_policy_attachment.tasks",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.aws_security_group_rule.this",
            "module.ecs.module.service.data.aws_caller_identity.current",
            "module.ecs.module.service.data.aws_ecs_task_definition.this",
            "module.ecs.module.service.data.aws_iam_policy_document.service",
            "module.ecs.module.service.data.aws_iam_policy_document.service_assume",
            "module.ecs.module.service.data.aws_iam_policy_document.task_exec",
            "module.ecs.module.service.data.aws_iam_policy_document.task_exec_assume",
            "module.ecs.module.service.data.aws_iam_policy_document.tasks",
            "module.ecs.module.service.data.aws_iam_policy_document.tasks_assume",
            "module.ecs.module.service.data.aws_partition.current",
            "module.ecs.module.service.data.aws_region.current",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.ecs.module.service.module.container_definition.aws_cloudwatch_log_group.this",
            "module.ecs.module.service.module.container_definition.data.aws_region.current",
            "module.server.aws_alb_target_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:security-group/sg-097e7f3b2ebb862ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097e7f3b2ebb862ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.124.32.0/23",
                  "10.124.60.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.91.40.0/24"
                ],
                "description": "HTTPS from CloudFront",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "avm-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "767397974420",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a3c73e6d7db4347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_ingress_cloudfront",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.91.40.0/24"
            ],
            "description": "HTTPS from CloudFront",
            "from_port": 80,
            "id": "sgrule-2450498096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-097e7f3b2ebb862ff",
            "security_group_rule_id": "sgr-0cba983d0624c21d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:security-group-rule/sgr-08581bcf1919d981f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08581bcf1919d981f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-097e7f3b2ebb862ff",
            "security_group_rule_id": "sgr-08581bcf1919d981f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:me-central-1:767397974420:loadbalancer/app/avm-sit-alb/c60301e925982a90",
            "arn_suffix": "app/avm-sit-alb/c60301e925982a90",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-avm-sit-alb-1564825152.me-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:me-central-1:767397974420:loadbalancer/app/avm-sit-alb/c60301e925982a90",
            "idle_timeout": 3600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "avm-sit-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-097e7f3b2ebb862ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-085b28bbc16c1023d"
              },
              {
                "subnet_id": "subnet-0cea2ec77e6c4ded8"
              }
            ],
            "subnets": [
              "subnet-085b28bbc16c1023d",
              "subnet-0cea2ec77e6c4ded8"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "avm-prod",
              "map-migrated": "mig5TZY31HX9S"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "avm-prod",
              "map-migrated": "mig5TZY31HX9S"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347",
            "xff_header_processing_mode": "append",
            "zone_id": "Z08230872XQRWHG2XF6I"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_subnet.app_subnet_1",
            "data.aws_subnet.app_subnet_2",
            "data.aws_vpc.vpc",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:security-group/sg-0e479c3b232e5a81a",
            "description": "Control traffic to/from RDS instances",
            "egress": [],
            "id": "sg-0e479c3b232e5a81a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.91.40.0/24"
                ],
                "description": "Allow inbound traffic from existing Security Groups",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "avm-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "767397974420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "avm-prod",
              "map-migrated": "mig5TZY31HX9S"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "avm-prod",
              "map-migrated": "mig5TZY31HX9S"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.91.40.0/24"
            ],
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": 5432,
            "id": "sgrule-527640775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e479c3b232e5a81a",
            "security_group_rule_id": "sgr-0496d65044675b61b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:security-group/sg-077a22523716e71ef",
            "description": "Security Group for Redis cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077a22523716e71ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.91.40.0/24"
                ],
                "description": "Allow inbound traffic from existing Security Groups",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "avm-prod-redis-sg",
            "name_prefix": "",
            "owner_id": "767397974420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "avm-prod",
              "map-migrated": "mig5TZY31HX9S"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "avm-prod",
              "map-migrated": "mig5TZY31HX9S"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09a3c73e6d7db4347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_redis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3483882696",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-077a22523716e71ef",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.security_group_redis.aws_security_group.this",
            "module.security_group_redis.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_redis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.91.40.0/24"
            ],
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": 6379,
            "id": "sgrule-3048159696",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077a22523716e71ef",
            "security_group_rule_id": "sgr-018ddab9150620e64",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.security_group_redis.aws_security_group.this",
            "module.security_group_redis.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:me-central-1:767397974420:targetgroup/avm-prod-server-tg/cce969f51a6a3180",
            "arn_suffix": "targetgroup/avm-prod-server-tg/cce969f51a6a3180",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:767397974420:targetgroup/avm-prod-server-tg/cce969f51a6a3180",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:me-central-1:767397974420:loadbalancer/app/avm-prod-alb/6e0af46c4132fba7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "avm-prod-server-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09a3c73e6d7db4347"
          },
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.ecs.module.cluster.aws_cloudwatch_log_group.this",
            "module.ecs.module.cluster.aws_ecs_capacity_provider.this",
            "module.ecs.module.cluster.aws_ecs_cluster.this",
            "module.ecs.module.cluster.aws_ecs_cluster_capacity_providers.this",
            "module.ecs.module.cluster.aws_iam_policy.task_exec",
            "module.ecs.module.cluster.aws_iam_role.task_exec",
            "module.ecs.module.cluster.aws_iam_role_policy_attachment.task_exec",
            "module.ecs.module.cluster.aws_iam_role_policy_attachment.task_exec_additional",
            "module.ecs.module.cluster.data.aws_iam_policy_document.task_exec",
            "module.ecs.module.cluster.data.aws_iam_policy_document.task_exec_assume",
            "module.ecs.module.service.aws_appautoscaling_policy.this",
            "module.ecs.module.service.aws_appautoscaling_scheduled_action.this",
            "module.ecs.module.service.aws_appautoscaling_target.this",
            "module.ecs.module.service.aws_ecs_service.ignore_task_definition",
            "module.ecs.module.service.aws_ecs_service.this",
            "module.ecs.module.service.aws_ecs_task_definition.this",
            "module.ecs.module.service.aws_ecs_task_set.ignore_task_definition",
            "module.ecs.module.service.aws_ecs_task_set.this",
            "module.ecs.module.service.aws_iam_policy.service",
            "module.ecs.module.service.aws_iam_policy.task_exec",
            "module.ecs.module.service.aws_iam_role.service",
            "module.ecs.module.service.aws_iam_role.task_exec",
            "module.ecs.module.service.aws_iam_role.tasks",
            "module.ecs.module.service.aws_iam_role_policy.tasks",
            "module.ecs.module.service.aws_iam_role_policy_attachment.service",
            "module.ecs.module.service.aws_iam_role_policy_attachment.task_exec",
            "module.ecs.module.service.aws_iam_role_policy_attachment.task_exec_additional",
            "module.ecs.module.service.aws_iam_role_policy_attachment.tasks",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.aws_security_group_rule.this",
            "module.ecs.module.service.data.aws_caller_identity.current",
            "module.ecs.module.service.data.aws_ecs_task_definition.this",
            "module.ecs.module.service.data.aws_iam_policy_document.service",
            "module.ecs.module.service.data.aws_iam_policy_document.service_assume",
            "module.ecs.module.service.data.aws_iam_policy_document.task_exec",
            "module.ecs.module.service.data.aws_iam_policy_document.task_exec_assume",
            "module.ecs.module.service.data.aws_iam_policy_document.tasks",
            "module.ecs.module.service.data.aws_iam_policy_document.tasks_assume",
            "module.ecs.module.service.data.aws_partition.current",
            "module.ecs.module.service.data.aws_region.current",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.ecs.module.service.module.container_definition.aws_cloudwatch_log_group.this",
            "module.ecs.module.service.module.container_definition.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:767397974420:security-group/sg-08d968a9191e1e6c9",
            "description": "Security Group allowing inbound traffic on port 443 from load-balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d968a9191e1e6c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097e7f3b2ebb862ff"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "avm-prod-server-sg",
            "name_prefix": "",
            "owner_id": "767397974420",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a3c73e6d7db4347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.vpc",
            "module.ecs.module.cluster.aws_cloudwatch_log_group.this",
            "module.ecs.module.cluster.aws_ecs_capacity_provider.this",
            "module.ecs.module.cluster.aws_ecs_cluster.this",
            "module.ecs.module.cluster.aws_ecs_cluster_capacity_providers.this",
            "module.ecs.module.cluster.aws_iam_policy.task_exec",
            "module.ecs.module.cluster.aws_iam_role.task_exec",
            "module.ecs.module.cluster.aws_iam_role_policy_attachment.task_exec",
            "module.ecs.module.cluster.aws_iam_role_policy_attachment.task_exec_additional",
            "module.ecs.module.cluster.data.aws_iam_policy_document.task_exec",
            "module.ecs.module.cluster.data.aws_iam_policy_document.task_exec_assume",
            "module.ecs.module.service.aws_appautoscaling_policy.this",
            "module.ecs.module.service.aws_appautoscaling_scheduled_action.this",
            "module.ecs.module.service.aws_appautoscaling_target.this",
            "module.ecs.module.service.aws_ecs_service.ignore_task_definition",
            "module.ecs.module.service.aws_ecs_service.this",
            "module.ecs.module.service.aws_ecs_task_definition.this",
            "module.ecs.module.service.aws_ecs_task_set.ignore_task_definition",
            "module.ecs.module.service.aws_ecs_task_set.this",
            "module.ecs.module.service.aws_iam_policy.service",
            "module.ecs.module.service.aws_iam_policy.task_exec",
            "module.ecs.module.service.aws_iam_role.service",
            "module.ecs.module.service.aws_iam_role.task_exec",
            "module.ecs.module.service.aws_iam_role.tasks",
            "module.ecs.module.service.aws_iam_role_policy.tasks",
            "module.ecs.module.service.aws_iam_role_policy_attachment.service",
            "module.ecs.module.service.aws_iam_role_policy_attachment.task_exec",
            "module.ecs.module.service.aws_iam_role_policy_attachment.task_exec_additional",
            "module.ecs.module.service.aws_iam_role_policy_attachment.tasks",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.aws_security_group_rule.this",
            "module.ecs.module.service.data.aws_caller_identity.current",
            "module.ecs.module.service.data.aws_ecs_task_definition.this",
            "module.ecs.module.service.data.aws_iam_policy_document.service",
            "module.ecs.module.service.data.aws_iam_policy_document.service_assume",
            "module.ecs.module.service.data.aws_iam_policy_document.task_exec",
            "module.ecs.module.service.data.aws_iam_policy_document.task_exec_assume",
            "module.ecs.module.service.data.aws_iam_policy_document.tasks",
            "module.ecs.module.service.data.aws_iam_policy_document.tasks_assume",
            "module.ecs.module.service.data.aws_partition.current",
            "module.ecs.module.service.data.aws_region.current",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.ecs.module.service.module.container_definition.aws_cloudwatch_log_group.this",
            "module.ecs.module.service.module.container_definition.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}